# scheduler

./: README.md  cli.py  install_dependencies.py  main.py  pyproject.toml  requirements.txt  scheduler.db  test_imports.py  test_login.py  user_registration_plan.md
docs/: csrf_enforcement_summary.md  database_updates.md  error_handling_improvements.md  query_parameter_security.md  query_parameter_validation_summary.md  security_headers.md
domain/entities/: api_key.py  base.py  employee.py  schedule.py  user.py  workstation.py
domain/models/: ApiKeyModel.py  Base.py  DepartmentModel.py  EmployeeModel.py  GroupModel.py  LineTypeModel.py  RefreshTokenModel.py  RoleModel.py  ScheduleModel.py  TeamMemberModel.py  TeamModel.py  UserModel.py  WorkstationModel.py  __init__.py  db.py
domain/repositories/: base.py  employee_repository.py  schedule_repository.py  workstation_repository.py
domain/services/: schedule_service.py  user_service.py
infrastructure/: config.py  database.py  exceptions.py
infrastructure/api/: async_db.py  auth.py  csrf.py  dependencies.py  dependencies_csrf.py  exception_handlers.py  pagination.py  query_validation.py  rate_limiter.py  sanitization.py  security.py
infrastructure/audit/: __init__.py  audit_logger.py  bus.py
infrastructure/cache/: config.py
infrastructure/config/: __init__.py  csrf_config.py  settings.py
infrastructure/entities/: refresh_token.py
migrations/: env.py
scripts/: README.md  kill_api_process.py  setup_initial_data.py  update_database.py
tests/: MANUAL_TESTING_GUIDE.md  README.md  conftest.py
(+60 files in other folders)
